Fix alignment on coverage map headers

--- a/root/include/final_tweaks.css
+++ b/root/include/final_tweaks.css
@@ -31,3 +31,7 @@ a.navigation:hover
 #query_results_content_table {
     background-color: #DFF0FF
 }
+
+.coverage_map_header{
+    padding-left: 12px;
+ }
